<resources>
    <string name="app_name">OngSomosMas</string>
    <string name="name_lastname">Nombre y Apellido</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repite la contraseña</string>
    <string name="register">Registrarme</string>
    <string name="redirect">Ya tienes cuenta? Ingresa!</string>
    <string name="login">Login</string>
    <string name="sing_up">No tienes cuenta? Registrate!</string>
    <string name="title">Hola! Bienvenidx</string>
    <string name="titleError">Error</string>
    <string name="titleRegister">Usuario Registrado</string>
    <string name="bodyErrorRegister">Usuario no registrado, vuelva a intentarlo.</string>
    <string name="bodyRegisterOK">Usuario registrado correctamente</string>
    <string name="bodyErrorLogin">Usuario no encontrado, vuelva a intentarlo.</string>
    <string name="buttonOk">Ok</string>
    <string name="notSamePassword">Las contraseñas son diferentes></string>
    <string name="wrongName">Nombre y Apellido con error</string>
    <string name="wrongEmail">Email con error</string>
    <string name="wrongPassword">Password con error</string>
    <string name="wrongPasswordRepeat">Password confirmacion con error"</string>
    <string name="tokenFile">token_file</string>
    <string name="tokenValue">tokenValue</string>
    <string name="textHomeMain">"Desde 1997 en Somos Más trabajamos con los chicos y chicas, mamás y papás, abuelos y vecinos del barrio La Cava generando procesos de crecimiento y de inserción social. Uniendo las manos de todas las familias, las que viven en el barrio y las que viven fuera de él, es que podemos pensar, crear y garantizar estos procesos.\n
    Somos una asociación civil sin fines de lucro que se creó en 1997 con la intención de dar alimento a las familias del barrio. Con el tiempo fuimos involucrándonos con la comunidad y agrandando y mejorando nuestra capacidad de trabajo. Hoy somos un centro comunitario que acompaña a más de 700 personas a través de las áreas de: Educación, deportes, primera infancia, salud, alimentación y trabajo social."</string>
    <string name="popupMenuHome">Inicio</string>
    <string name="popupMenuStaff">Staff</string>
    <string name="popupMenuStaffTitle">¡Nuestro staff!</string>
    <string name="popupMenuNews">Novedades</string>
    <string name="popupMenuContact">Contacto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Nombre y Apellido con error</string>
    <string name="invalid_password">Passowrd debe contener al menos 5 caracteres</string>
    <string name="login_failed">"Error en el Login"</string>
    <string name="contactTittle">¡Contactate con nosotros!</string>
    <string name="message">Mensaje</string>
    <string name="sendMessage">Enviar mensaje</string>
    <string name="tokenUser">tokenUser</string>
    <string name="messageValidation">Ha ocurrido un error. Intente nuevamente mas tarde</string>
    <string name="messageValidationOk">La solicitud se ingreso correctamente</string>
    <string name="solicitudOK">Muchas gracias!</string>
    <string name="Rol">Rol que desempeña</string>
    <string name="newsNotOK">Ha ocurrido un error obteniendo la información</string>
</resources>