<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/top_logo"
        android:layout_width="190dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_somos_mas" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_height="250dp"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_logo"
        app:srcCompat="@drawable/main_foto" />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="6dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/MenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle">

        <TextView
            android:id="@+id/main_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textHomeMain"
            android:textSize="12sp" />
    </ScrollView>

    <Button
        android:id="@+id/MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text=""
        app:icon="@drawable/ic_menu"
        app:iconGravity="end"
        app:iconSize="32dp"
        app:iconTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iconContact"
            android:layout_width="43dp"
            android:layout_height="35dp"
            app:tint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_contact" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popupMenuContact"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="65dp"
            app:layout_constraintStart_toStartOf="@id/iconContact"
            app:layout_constraintEnd_toEndOf="@id/iconContact"
            app:layout_constraintTop_toBottomOf="@id/iconContact"/>

        <ImageView
            android:id="@+id/iconStaff"
            android:layout_width="43dp"
            android:layout_height="35dp"
            app:tint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_staff" />

        <TextView
            android:id="@+id/tv_staff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popupMenuStaff"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="65dp"
            app:layout_constraintStart_toStartOf="@id/iconStaff"
            app:layout_constraintEnd_toEndOf="@id/iconStaff"
            app:layout_constraintTop_toBottomOf="@id/iconStaff"/>

        <ImageView
            android:id="@+id/iconNews"
            android:layout_width="43dp"
            android:layout_height="35dp"
            app:tint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.80"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_news" />

        <TextView
            android:id="@+id/tv_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popupMenuNews"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="65dp"
            app:layout_constraintStart_toStartOf="@id/iconNews"
            app:layout_constraintEnd_toEndOf="@id/iconNews"
            app:layout_constraintTop_toBottomOf="@id/iconNews"/>

        <ImageView
            android:id="@+id/iconClear"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:tint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_clear"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>